<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/edtxtform"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTxtNAMES"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="username:password"
        android:ems="10"
        android:hint="@string/edtxtnames"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/editTxtLASTNAMES"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:ems="10"


        android:hint="@string/edtxtlastnames"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/editTxtMAIL"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:ems="10"

        android:hint="@string/edtxtemail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:text="@string/txv_clave" />


    <EditText
        android:id="@+id/editTxtNEWPASSWORD"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/edit_clave"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:text="@string/txt_ConfirmPasword" />


    <EditText
        android:id="@+id/editTxtCONFIRMPASSW"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/edit_Confirmar_Clave"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTxtPHONE"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/edtxt_PhoneNumber"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:text="@string/txt_agree"
        android:textColor="#2196F3"
        android:textSize="15sp"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/TERMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_agreeterms" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#500A4F"
        android:text="@string/txt_registrarse"
        app:cornerRadius="20dp" />




</LinearLayout>